<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".activities.TitleScreen">

    <EditText
        android:id="@+id/place_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/place_id"
        android:inputType="phone" />

    <TextView
        android:id="@+id/wlan_prev_scan_count_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/wlan_prev_scan_count_text"/>

    <TextView
        android:id="@+id/wlan_prev_scan_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/wlan_place_choose"/>

    <Button
        android:id="@+id/wlan_scan"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/wlan_scan_button"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/wlan_delete_measurements_for_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wlan_delete_all_for_place"
        android:background="#ff8e8e" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/wlan_calculate_averages"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/wlan_model_button"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/wlan_localization"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/wlan_lokalisierung_button"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/averages_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/averages_text"/>

    <!--<ListView
        android:id="@+id/listLokalisierungWifi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>-->

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/listViewWifi" />

</LinearLayout>

