<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <EditText
        android:id="@+id/place_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/place_id"
        android:inputType="phone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wlan_prev_scan_count_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/wlan_prev_scan_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wlan_place_choose"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/wlan_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wlan_scan_button" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/wlan_delete_measurements_for_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff8e8e"
        android:text="@string/wlan_delete_all_for_place" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/wlan_calculate_averages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wlan_model_button" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/wlan_localization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wlan_lokalisierung_button" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/db_manager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/db_manager" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/debug_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/averages_text" />

    <!--<ListView
        android:id="@+id/listLokalisierungWifi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>-->

    <ListView
        android:id="@+id/listViewWifi"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />



</LinearLayout>

